@@ -631,6 +631,32 @@ Collection.prototype.findAndModify = function findAndModify (query, sort, doc, o
 }
 
 /**
+ * Find and remove a document
+ *
+ * Options
+ *  - **safe**, execute insert with a getLastError command returning the result of the insert command.
+ *   - values = *true | {w:n, wtimeout:n} | {fsync:true}*
+ *   - default = *false*
+ *
+ * @param {Object} query query object to locate the object to modify
+ * @param {Array}  sort - if multiple docs match, choose the first one in the specified sort order as the object to manipulate
+ * @param {Object} [options] additional options during update.
+ * @param {Function} [callback] returns results.
+ * @return {null}
+ * @api public
+ */
+Collection.prototype.findAndRemove = function(query, sort, options, callback) {
+  var args = Array.prototype.slice.call(arguments, 1);
+  callback = args.pop();
+  sort = args.length ? args.shift() : [];
+  options = args.length ? args.shift() : {};  
+  // Add the remove option
+  options['remove'] = true;
+  // Execute the callback
+  this.findAndModify(query, sort, null, options, callback);  
+}
+
+/**
  * Creates a cursor for a query that can be used to iterate over results from MongoDB
  *
  * Various argument possibilities
@@ -1135,7 +1161,7 @@ Collection.prototype.dropIndex = function dropIndex (name, callback) {
  * @return {null}
  * @api public
  */
-Collection.prototype.dropIndexes = function dropIndexes (callback) {
+Collection.prototype.dropAllIndexes = function dropIndexes (callback) {
   this.db.dropIndex(this.collectionName, '*', function (err, result) {
     if(err != null) {
       callback(err, false);
@@ -1146,6 +1172,16 @@ Collection.prototype.dropIndexes = function dropIndexes (callback) {
     }
   });
 };
+
+/**
+ * Drops all indexes from this collection.
+ *
+ * @deprecated
+ * @param {Function} callback returns the results.
+ * @return {null}
+ * @api private
+ */
+Collection.prototype.dropIndexes = Collection.prototype.dropAllIndexes;
 
 /**
  * Reindex all indexes on the collection
@@ -1435,6 +1471,33 @@ Collection.prototype.isCapped = function isCapped(callback) {
     }
   });
 };
+
+/**
+ * Checks if one or more indexes exist on the collection
+ *
+ * @param {String|Array} indexNames check if one or more indexes exist on the collection.
+ * @param {Function} callback returns if the indexes exist.
+ * @api public
+ */
+Collection.prototype.indexExists = function indexExists(indexes, callback) {
+ this.indexInformation(function(err, indexInformation) {
+   // If we have an error return
+   if(err != null) return callback(err, null);
+   // Let's check for the index names
+   if(Array.isArray(indexes)) {
+     for(var i = 0; i < indexes.length; i++) {
+       if(indexInformation[indexes[i]] == null) {
+         return callback(null, false);
+       }
+     }
+     
+     // All keys found return true
+     return callback(null, true);
+   } else {
+     return callback(null, indexInformation[indexes] != null);
+   }
+ }); 
+}
 
 /**
  * Expose.
